[package]
name = "poseidon-rs"
version = "0.0.10"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = { version = "0.4", default-features = false }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false
